# many_cores

./: .gitignore  01426733.txt  README.md  download
docs/: feedback.txt
ex10/: classical-cg_cuda.cu  classical-cg_hip.cpp  classical-cg_host.cpp  classical-cg_sycl.cpp  urls.txt
ex10/data/: ph_data_cuda.csv  ph_data_hip.csv  ph_data_host.csv  ph_data_mykernel_cuda.csv  ph_data_sycl.csv
ex10/old/: classical-cg_sycl.cpp
ex10/plots/: plots.ipynb
ex10/snippets/: first_sycl.cpp  hipify.cpp
ex2/: ex2_1_a.cu  ex2_1_b.cu  example.cu  plots.ipynb  tasks.md
ex2/task1/: ex2_1_a.cu  ex2_1_b.cu  ex2_1_c.cu  ex2_1_e.cu  plots.ipynb
ex2/task2/: ex2_2.cu  plots.ipynb
ex3/task1/: data_offset.csv  data_stride.csv  plots.ipynb  vectorAdd copy.cu  vectorAdd.cu
ex3/task2/: CG.cu  kernelTests.cu
ex4/cg/: cg-kernels.cuh  classical-cg.cu  classical.csv  pipeline-cg.cu  pipelined.csv  plots.ipynb
ex4/mdot/: data.csv  mdot.cu  mdot_kernels.cuh  output.txt  plots.ipynb
ex5/task1/: exclusive_scan.cu  in_ex_data_ph.csv  (+1 more)
ex6/: dot.cu
ex7/task2/: CMakeLists.txt  matvec.cpp  matvec_kernels.cl  plots.ipynb  urls.txt
ex7/task2/data/: ph_data_CPU.csv  ph_data_GPU.csv
ex7/task2/data/save/: ph_data2_CPU.csv  ph_data2_GPU.csv
ex8/: CMakeLists.txt  bonus.cu  boost.cpp  get_data.sh  gtx_build_error_vcl-cuda.txt  main.cpp  mykernel.cpp  mykernel_cl.cpp  thrust.cu  urls.txt  vexcl.cpp  vexcl_kernel.cpp  viennacl.cpp
ex9/: get_data.sh  openmp.cpp  prototype.ipynb  transpose.cu  urls.txt
snippets/: cudaDeviceProperties.cu  example copy.cu  mc_helpers.cpp  transpose.cu
(+76 files in other folders)
